Store/return ht/wd of images, not bounding box
You only need the llx/lly points if applying a viewport by telling the driver itself
where to place the image. That only makes sense with some drivers (dvips, (x)dvipdfmx))
and doesn't add much to the alternative of include the image 'naturally' then use a
general box operation.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -738,12 +738,12 @@
   }
 \cs_new_protected:Npn \@@_image_getbb_auxi:n #1
   {
-    \int_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _int }
+    \dim_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
       {
-        \dim_set_eq:Nc \l__image_urx_dim
-          { c__image_ #1 \l_@@_image_attr_tl _urx__dim }
-        \dim_set_eq:Nc \l__image_ury_dim
-          { c__image_ #1 \l_@@_image_attr_tl _ury__dim }
+        \dim_set_eq:Nc \l__image_ht_dim
+          { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
+        \dim_set_eq:Nc \l__image_wd_dim
+          { c__image_ #1 \l_@@_image_attr_tl _wd_dim }
       }
       { \@@_image_getbb_auxii:n {#1} }
   }
@@ -757,14 +757,14 @@
       {#1}
     \hbox_set:Nn \l__image_tmp_box
       { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
-    \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_ht_dim { \box_ht:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_wd_dim { \box_wd:N \l__image_tmp_box }
     \int_const:cn { c__image_ #1 \l_@@_image_attr_tl _int }
       { \tex_the:D \pdftex_pdflastximage:D }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _urx__dim }
-      { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ury__dim }
-      { \l__image_ury_dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
+      { \l__image_ht_dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _wd_dim }
+      { \l__image_wd_dim }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1112,22 +1112,22 @@
 \cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
 \cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
   {
-    \dim_if_exist:cTF { c__image_ #1#3 _urx_dim }
+    \dim_if_exist:cTF { c__image_ #1#3 _ht_dim }
       {
-        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1#3 _urx__dim }
-        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1#3 _ury__dim }
+        \dim_set_eq:Nc \l__image_ht_dim { c__image_ #1#3 _ht_dim }
+        \dim_set_eq:Nc \l__image_wd_dim { c__image_ #1#3 _wd_dim }
       }
       { \@@_image_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxvi:nNnn #1#2#3#4
   {
     \hbox_set:Nn \l__image_tmp_box { #2 #1 ~ #4 }
-    \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
-    \dim_const:cn { c__image_ #1#3 _urx__dim }
-      { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1#3 _ury__dim }
-      { \l__image_ury_dim }
+    \dim_set:Nn \l__image_ht_dim { \box_ht:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_wd_dim { \box_wd:N \l__image_tmp_box }
+    \dim_const:cn { c__image_ #1#3 _ht__dim }
+      { \l__image_ht_dim }
+    \dim_const:cn { c__image_ #1#3 _wd__dim }
+      { \l__image_wd_dim }
   }
 \cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
