--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -82,15 +82,12 @@
 %   specifications.
 % \end{variable}
 %
-% \begin{variable}[int]
-%   {
-%     \l__image_llx_dim, \l__image_lly_dim ,
-%     \l__image_urx_dim, \l__image_ury_dim
-%   }
-%   Dimensions holding the bounding box of the image file: |ll| = lower left,
-%   |ur| = upper right, |x| and |y| for horizontal and vertical, respectively.
+% \begin{variable}[int]{\l__image_ht_dim, \l__image_wd_dim}
+%   Dimensions holding the height and width of the image file.
 %   These values may be extracted/read from the image files themselves
-%   (see \cs{__image_extract_bb:n} and \cs{__image_read_bb:n}).
+%   (see \cs{__image_extract_bb:n} and \cs{__image_read_bb:n}).  Note that
+%   image files have no depth: they are always included such that the reference
+%   point is at $(0,0)$.
 % \end{variable}
 %
 % \begin{function}{\__image_extract_bb:n}
@@ -98,12 +95,8 @@
 %     \cs{__image_extract_bb:n} \meta{file}
 %   \end{syntax}
 %   Extracts bounding box data for the image \meta{file} using the |extractbb|
-%   utility, and stores the returned information in the dimensions
-%   \cs{l__image_llx_dim}, \emph{etc.} The boolean \cs{l__image_bb_found_bool}
-%   is set |true| on successful determination of a bounding box. In the case
-%   where no data is obtained, this variable is |false| and the four dimensions
-%   are set to place holders: |llx|/|lly| to $0\,\mathrm{bp}$ and |urx|/|ury| to
-%   $72\,\mathrm{bp}$.
+%   utility, and stores the size of the image file in \cs{l__image_ht_dim} and
+%   \cs{l__image_wd_dim}.
 %
 %   The \meta{file} name should be fully-qualified and sanitized: no search
 %   or other manipulation is carried out at this level. No check is made on
@@ -134,13 +127,8 @@
 %   \end{verbatim}
 %   where \meta{llx}, \meta{lly}, \meta{urx} and \meta{ury} are the corners
 %   of the bounding box expressed in PostScript (\enquote{big}) points. The
-%   four values are used to set the dimensions \cs{l__image_llx_dim},
-%   \emph{etc.} The data format searched for depends on the option |hiresbb|.
-%   The boolean \cs{l__image_bb_found_bool} is set |true| on successful
-%   determination of a bounding box. In the
-%   case where no data is obtained, this variable is |false| and the
-%   four dimensions are set to place holders: |llx|/|lly| to $0\,\mathrm{bp}$
-%   and |urx|/|ury| to $72\,\mathrm{bp}$.
+%   values are used to set the variables \cs{l__image_ht_dim} and
+%   \cs{l__image_wd_dim}.
 %
 %   The \meta{file} name should be fully-qualified and sanitized: no search
 %   or other manipulation is carried out at this level. No check is made on
@@ -199,17 +187,11 @@
 %
 % \subsection{Obtaining bounding box data}
 %
-% \begin{variable}[int]
-%   {
-%     \l__image_llx_dim , \l__image_lly_dim ,
-%     \l__image_urx_dim , \l__image_ury_dim
-%   }
+% \begin{variable}[int]{\l__image_ht_dim , \l__image_wd_dim}
 %   Storage for the return of results.
 %    \begin{macrocode}
-\dim_new:N \l__image_llx_dim
-\dim_new:N \l__image_lly_dim
-\dim_new:N \l__image_urx_dim
-\dim_new:N \l__image_ury_dim
+\dim_new:N \l__image_ht_dim
+\dim_new:N \l__image_wd_dim
 %    \end{macrocode}
 % \end{variable}
 %
@@ -275,12 +257,10 @@
 %   \begin{macrocode}
 \cs_new_protected:Npx \@@_read_bb_auxi:nnnn #1#2#3#4
   {
-    \dim_if_exist:cTF { c_@@_ #1#2 _llx_dim }
+    \dim_if_exist:cTF { c_@@_ #1#2 _ht_dim }
       {
-        \dim_set_eq:Nc \l__image_llx_dim { c_@@_ #1#2 _llx_dim }
-        \dim_set_eq:Nc \l__image_lly_dim { c_@@_ #1#2 _lly_dim }
-        \dim_set_eq:Nc \l__image_urx_dim { c_@@_ #1#2 _urx_dim }
-        \dim_set_eq:Nc \l__image_ury_dim { c_@@_ #1#2 _ury_dim }
+        \dim_set_eq:Nc \l__image_ht_dim { c_@@_ #1#2 _ht_dim }
+        \dim_set_eq:Nc \l__image_wd_dim { c_@@_ #1#2 _wd_dim }
       }
       { \@@_read_bb_auxii:nnn {#3} {#4} {#1} {#2} }
   }
@@ -297,10 +277,8 @@
           }
       }
     \ior_close:N \exp_not:N \l_@@_tmp_ior
-    \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l__image_llx_dim }
-    \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l__image_lly_dim }
-    \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l__image_urx_dim }
-    \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l__image_ury_dim }
+    \dim_const:cn { c_@@_ #3#4 _ht_dim } { \l__image_ht_dim }
+    \dim_const:cn { c_@@_ #3#4 _wd_dim } { \l__image_wd_dim }
   }
 \use:x
   {
@@ -340,10 +318,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_read_bb_auxv:w #1~#2~#3~#4~#5 \q_stop
   {
-    \dim_set:Nn \l__image_llx_dim { #1 bp }
-    \dim_set:Nn \l__image_lly_dim { #2 bp }
-    \dim_set:Nn \l__image_urx_dim { #3 bp }
-    \dim_set:Nn \l__image_ury_dim { #4 bp }
+    \dim_set:Nn \l__image_ht_dim { #4 bp - #2 bp }
+    \dim_set:Nn \l__image_wd_dim { #3 bp - #1 bp }
     \ior_map_break:
   }
 %    \end{macrocode}
