Support for bitmap interpolation

--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -52,6 +52,10 @@
 %
 % \section{\pkg{l3image} documentation}
 %
+% \begin{variable}{interpolate}
+%   Indicates whether interpolation should be applied to bitmap image files.
+% \end{variable}
+%
 % \begin{variable}{page}
 %   The page number of an image to be used when including a multi-page image
 %   file. The value should be a positive integer.
@@ -70,6 +74,10 @@
 % the driver layer. Individual drivers also require some common routines
 % which in themselves contain no driver-specific code. This functionality
 % is made available here.
+%
+% \begin{variable}[int]{\l__image_interpolate_bool}
+%   Indicates whether interpolation should be applied to bitmap image files.
+% \end{variable}
 %
 % \begin{variable}[int]{\l__image_page_int}
 %   The page to extract from a multi-page image file: used for |.pdf| files
@@ -168,15 +176,17 @@
 %
 % \subsection{Image feature support}
 %
-% \begin{macro}[int]{\l__image_page_int, \l__image_pagebox_tl}
+% \begin{macro}[int]
+%   {\l__image_interpolate_bool, \l__image_page_int, \l__image_pagebox_tl}
 %   Keys which control features of images. The somewhat odd order for
 %   |pagebox| matches that in the \pdfTeX{} manual (where the choices all
 %   have numerical values).
 %    \begin{macrocode}
 \keys_define:nn { image }
   {
-    page    .int_set:N  = \l__image_page_int   ,
-    pagebox .choices:nn =
+    interpolate .bool_set:N  = \l__image_interpolate_bool,
+    page        .int_set:N   = \l__image_page_int        ,
+    pagebox     .choices:nn  =
       { artbox, bleedbox , mediabox , trimbox }
       { \tl_set:Nn \l__image_pagebox_tl {#1} } ,
     pagebox / cropbox .code:n = { \tl_clear:N \l__image_pagebox_tl }
