--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -756,7 +756,7 @@
   {
     \tex_immediate:D \pdftex_pdfximage:D
       \bool_if:NT \l__image_interpolate_bool
-        { /Interpolate~true }
+        { attr~/Interpolate~true }
       \int_compare:nNnT \l__image_page_int > 0
         { page ~ \int_use:N \l__image_page_int }
       \tl_if_empty:NF \l__image_pagebox_tl
