Code comment [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -752,6 +752,10 @@
       }
       { \@@_image_getbb_auxii:n {#1} }
   }
+%    \begin{macrocode}
+%   Measuring the image is done by boxing up: for PDF images we could
+%   use |\pdftex_pdfximagebbox:D|, but if doesn't work for other types.
+%    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
     \tex_immediate:D \pdftex_pdfximage:D
