--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -721,11 +721,7 @@
   {
     \int_zero:N \l__image_page_int
     \tl_clear:N \l__image_pagebox_tl
-    \tl_set:Nx \l_@@_image_attr_tl
-      {
-        \bool_if:NT \l__image_interpolate_bool
-          { :I }
-      }
+    \tl_clear:N \l_@@_image_attr_tl
     \@@_image_getbb_auxi:n {#1}
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
@@ -759,8 +755,6 @@
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
     \tex_immediate:D \pdftex_pdfximage:D
-      \bool_if:NT \l__image_interpolate_bool
-        { attr ~ { /Interpolate~true } }
       \int_compare:nNnT \l__image_page_int > 0
         { page ~ \int_use:N \l__image_page_int }
       \tl_if_empty:NF \l__image_pagebox_tl
@@ -958,7 +952,6 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \bool_set_false:N \l__image_interpolate_tl
     \__image_extract_bb:n {#1}
   }
 %</dvipdfmx>
@@ -1005,8 +998,6 @@
           { :P \int_use:N \l__image_page_int }
         \tl_if_empty:NF \l__image_pagebox_tl
           { : \l__image_pagebox_tl }
-        \bool_if:NT \l__image_interpolate_bool
-           { :I }
       }
       {#1} {#2}
   }
@@ -1033,8 +1024,6 @@
         \tl_if_empty:NF \l__image_pagebox_tl
           { pagebox ~ \l__image_pagebox_tl \c_space_tl }
         (#1)
-        \bool_if:NT \l__image_interpolate_bool
-          { <</Interpolate~true>> }
       }
   }
 %    \end{macrocode}
