--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -57,13 +57,6 @@
 %   file. The value should be a positive integer.
 % \end{variable}
 %
-% \begin{variable}{pagebox}
-%   The page box setting used when determining the bounding box of an image:
-%   used for |.pdf| images which may present multiple page boxes. Valid
-%   settings are |artbox|, |bleedbox|, |cropbox| (the standard setting),
-%   |mediabox| and |trimbox|.
-% \end{variable}
-%
 % \subsection{Internal functions}
 %
 % Inclusion of image files requires a range of low-level data be passed to
@@ -74,12 +67,6 @@
 % \begin{variable}[int]{\l__image_page_int}
 %   The page to extract from a multi-page image file: used for |.pdf| files
 %   which may contain multiple pages.
-% \end{variable}
-%
-% \begin{variable}[int]{\l__image_pagebox_tl}
-%   The nature of the page box setting used to determine the bounding box of
-%   material: used for |.pdf| files which feature multiple page box
-%   specifications.
 % \end{variable}
 %
 % \begin{variable}[int]{\l__image_ht_dim, \l__image_wd_dim}
@@ -168,20 +155,13 @@
 %
 % \subsection{Image feature support}
 %
-% \begin{macro}[int]{\l__image_page_int, \l__image_pagebox_tl}
-%   Keys which control features of images. The somewhat odd order for
-%   |pagebox| matches that in the \pdfTeX{} manual (where the choices all
-%   have numerical values).
+% \begin{macro}[int]{\l__image_page_int}
+%   Keys which control features of images.
 %    \begin{macrocode}
 \keys_define:nn { image }
   {
     page    .int_set:N   = \l__image_page_int,
-    pagebox .choices:nn  =
-      { artbox, bleedbox , mediabox , trimbox }
-      { \tl_set:Nn \l__image_pagebox_tl {#1} } ,
-    pagebox / cropbox .code:n = { \tl_clear:N \l__image_pagebox_tl }
   }
-\tl_new:N \l__image_pagebox_tl
 %    \end{macrocode}
 % \end{macro}
 %
@@ -198,8 +178,6 @@
 % \begin{macro}[int]{\__image_extract_bb:n, \__image_read_bb:n}
 % \begin{macro}[aux]{\@@_extract_bb_auix:nn, \@@_extract_bb_auix:Vn}
 % \begin{macro}[aux]{\@@_extract_bb_auxii:nnn}
-% \begin{macro}[aux]{\@@_extract_bb_auxiii:nnnn, \@@_extract_bb_auxiii:Vnnn}
-% \begin{macro}[aux]{\@@_extract_bb_auxiv:nnn}
 % \begin{macro}[aux]{\@@_read_bb_auxi:nnnn, \@@_read_bb_auxii:Vnnn}
 % \begin{macro}[aux]
 %   {
@@ -225,16 +203,6 @@
   { \@@_extract_bb_auxii:nnn {#2} { :P #1 } { -p~#1~ } }
 \cs_generate_variant:Nn \@@_extract_bb_auxi:nn { Vn }
 \cs_new_protected:Npn \@@_extract_bb_auxii:nnn #1#2#3
-  {
-   \tl_if_empty:NTF \l__image_pagebox_tl
-      { \@@_extract_bb_auxiv:nnn }
-      { \@@_extract_bb_auxiii:Vnnn \l__image_pagebox_tl }
-      {#1} {#2} {#3}
-  }
-\cs_new_protected:Npn \@@_extract_bb_auxiii:nnnn #1#2#3#4
-  { \@@_extract_bb_auxiv:nnn {#2} { #3 : #1 } { #4 -B~#1~ } }
-\cs_generate_variant:Nn \@@_extract_bb_auxiii:nnnn { V }
-\cs_new_protected:Npn \@@_extract_bb_auxiv:nnn #1#2#3
   {
     \@@_read_bb_auxi:nnnn {#1} {#2}
       { \tex_openin:D \l_@@_tmp_ior = "|extractbb~#3-O~#1" }
@@ -323,8 +291,6 @@
     \ior_map_break:
   }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
