Make l3image docs compile [ci skip]

--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -64,12 +64,12 @@
 % which in themselves contain no driver-specific code. This functionality
 % is made available here.
 %
-% \begin{variable}[int]{\l__image_page_int}
+% \begin{variable}{\l__image_page_int}
 %   The page to extract from a multi-page image file: used for |.pdf| files
 %   which may contain multiple pages.
 % \end{variable}
 %
-% \begin{variable}[int]{\l__image_ht_dim, \l__image_wd_dim}
+% \begin{variable}{\l__image_ht_dim, \l__image_wd_dim}
 %   Dimensions holding the height and width of the image file.
 %   These values may be extracted/read from the image files themselves
 %   (see \cs{__image_extract_bb:n} and \cs{__image_read_bb:n}).  Note that
@@ -291,7 +291,6 @@
     \ior_map_break:
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
