Tight up documentation [ci skip]

--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -53,8 +53,8 @@
 % \section{\pkg{l3image} documentation}
 %
 % \begin{variable}{page}
-%   The page number of an image to be used when including a multi-page image
-%   file. The value should be a positive integer.
+%   The page number of an image to be used when including a multi-page
+%   PDF file as an image. This key will be ignored for non-PDF images.
 % \end{variable}
 %
 % \subsection{Internal functions}
