Re-instroduce support for "interpolate" key for images
Unlike "pagebox", "interpolate" does seem to have some real-world
use cases: notably it is supported by pgf and see for example
https://tex.stackexchange.com/q/287999 or
https://tex.stackexchange.com/q/164055/. The interface here is also
quite clear: a simple boolean which is straight-forward to understand.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -720,7 +720,11 @@
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
     \int_zero:N \l__image_page_int
-    \tl_clear:N \l_@@_image_attr_tl
+    \tl_set:Nx \l_@@_image_attr_tl
+      {
+        \bool_if:NT \l__image_interpolate_bool
+          { :I }
+      }
     \@@_image_getbb_auxi:n {#1}
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
@@ -752,6 +756,8 @@
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
     \tex_immediate:D \pdftex_pdfximage:D
+      \bool_if:NT \l__image_interpolate_bool
+        { attr ~ { /Interpolate~true } }
       \int_compare:nNnT \l__image_page_int > 0
         { page ~ \int_use:N \l__image_page_int }
       {#1}
@@ -946,6 +952,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
+    \bool_set_false:N \l__image_interpolate_tl
     \__image_extract_bb:n {#1}
   }
 %</dvipdfmx>
@@ -990,6 +997,8 @@
       {
         \int_compare:nNnT \l__image_page_int > 0
           { :P \int_use:N \l__image_page_int }
+        \bool_if:NT \l__image_interpolate_bool
+           { :I }
       }
       {#1} {#2}
   }
@@ -1014,6 +1023,8 @@
         \int_compare:nNnT \l__image_page_int > 0
           { page ~ \int_use:N \l__image_page_int \c_space_tl }
         (#1)
+        \bool_if:NT \l__image_interpolate_bool
+          { <</Interpolate~true>> }
       }
   }
 %    \end{macrocode}
