--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -52,6 +52,11 @@
 %
 % \section{\pkg{l3image} documentation}
 %
+% \begin{variable}{interpolate}
+%   Indicates whether interpolation should be applied to bitmap image files.
+%   This key will be ignored for vector image files.
+% \end{variable}
+%
 % \begin{variable}{page}
 %   The page number of an image to be used when including a multi-page
 %   PDF file as an image. This key will be ignored for non-PDF images.
@@ -63,6 +68,10 @@
 % the driver layer. Individual drivers also require some common routines
 % which in themselves contain no driver-specific code. This functionality
 % is made available here.
+%
+% \begin{variable}{\l__image_interpolate_bool}
+%   Indicates whether interpolation should be applied to bitmap image files.
+% \end{variable}
 %
 % \begin{variable}{\l__image_page_int}
 %   The page to extract from a multi-page image file: used for |.pdf| files
@@ -155,12 +164,13 @@
 %
 % \subsection{Image feature support}
 %
-% \begin{macro}[int]{\l__image_page_int}
+% \begin{macro}[int]{\l__image_interpolate_bool, \l__image_page_int}
 %   Keys which control features of images.
 %    \begin{macrocode}
 \keys_define:nn { image }
   {
-    page    .int_set:N   = \l__image_page_int,
+    interpolate .bool_set:N = \l__image_interpolate_bool ,
+    page        .int_set:N  = \l__image_page_int
   }
 %    \end{macrocode}
 % \end{macro}
