l3candidates: Add preliminary shell-escape to l3sys

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -506,6 +506,61 @@
 %   random number support this produces an error.
 % \end{function}
 %
+% \begin{variable}[added = 2017-05-22]{\c_sys_shell_escape_int}
+%   This variable exposes the internal triple of the shell escape
+%   status.  The possible values are
+%   \begin{description}
+%   \item[0] Shell escape is disabled
+%   \item[1] Unrestricted shell escape is enabled
+%   \item[2] Restricted shell escape is enabled
+%   \end{description}
+% \end{variable}
+%
+% \begin{function}[added = 2017-05-22, EXP, pTF]{\sys_if_shell:}
+%   \begin{syntax}
+%     \cs{sys_if_shell_p:}
+%     \cs{sys_if_shell:TF} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Performs a check for whether shell escape is enabled.  This will
+%   return true if either of restricted or unrestircted shell escape
+%   is enabled.
+% \end{function}
+%
+% \begin{function}[added = 2017-05-22, EXP, pTF]{\sys_if_shell_unrestricted:}
+%   \begin{syntax}
+%     \cs{sys_if_shell_unrestricted_p:}
+%     \cs{sys_if_shell_unrestricted:TF} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Performs a check for whether \emph{unrestricted} shell escape is
+%   enabled.
+% \end{function}
+%
+% \begin{function}[added = 2017-05-22, EXP, pTF]{\sys_if_shell_restricted:}
+%   \begin{syntax}
+%     \cs{sys_if_shell_restricted_p:}
+%     \cs{sys_if_shell_restricted:TF} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Performs a check for whether \emph{restricted} shell escape is
+%   enabled.  This will return false if unrestricted shell escape is
+%   enabled.  Unrestricted shell escape is not considered a superset
+%   of restricted shell escape in this case.  To find whether any
+%   shell escape is enabled use \cs{sys_if_shell:}.
+% \end{function}
+%
+% \begin{function}[added = 2017-05-22]{\sys_shell_now:n, \sys_shell_now:x}
+%   \begin{syntax}
+%     \cs{sys_shell_now:n} \Arg{tokens}
+%   \end{syntax}
+%   Execute \meta{tokens} through shell escape immediately.
+% \end{macro}
+%
+% \begin{function}[added = 2017-05-22]{\sys_shell_shipout:n, \sys_shell_shipout:x}
+%   \begin{syntax}
+%     \cs{sys_shell_shipout:n} \Arg{tokens}
+%   \end{syntax}
+%   Execute \meta{tokens} through shell escape at shipout.
+% \end{function}
+%
 % \section{Additions to \pkg{l3tl}}
 %
 % \begin{function}[EXP,pTF]{\tl_if_single_token:n}
@@ -2004,6 +2059,123 @@
 \cs_new_protected:Npn \sys_gset_rand_seed:n #1
   { \pdftex_setrandomseed:D \__int_eval:w #1 \__int_eval_end: }
 %    \end{macrocode}
+% \end{macro}
+%
+%
+% \begin{variable}{\c_sys_shell_escape_int}
+%   Expose the engine's shell escape status to the user.
+%    \begin{macrocode}
+\int_const:Nn \c_sys_shell_escape_int
+  {
+    \sys_if_engine_luatex:TF
+      {
+        \luatex_directlua:D
+          {
+            tex.sprint((status.shell_escape~or~os.execute()) .. " ")
+          }
+      }
+      {
+        \pdftex_shellescape:D
+      }
+  }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP, pTF]{\sys_if_shell:}
+%   Performs a check for whether shell escape is enabled.  This will
+%   return true if either of restricted or unrestricted shell escape
+%   is enabled.
+%    \begin{macrocode}
+\prg_new_conditional:Nnn \sys_if_shell: { p , T , F , TF }
+  {
+    \if_int_compare:w \c_sys_shell_escape_int = 0 ~
+      \prg_return_false:
+    \else:
+      \prg_return_true:
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP, pTF]{\sys_if_shell_unrestricted:}
+%   Performs a check for whether \emph{unrestricted} shell escape is
+%   enabled.
+%    \begin{macrocode}
+\prg_new_conditional:Nnn \sys_if_shell_unrestricted: { p , T , F , TF }
+  {
+    \if_int_compare:w \c_sys_shell_escape_int = 1 ~
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP, pTF]{\sys_if_shell_unrestricted:}
+%   Performs a check for whether \emph{restricted} shell escape is
+%   enabled.  This will return false if unrestricted shell escape is
+%   enabled.  Unrestricted shell escape is not considered a superset
+%   of restricted shell escape in this case.  To find whether any
+%   shell escape is enabled use \cs{sys_if_shell:}.
+%    \begin{macrocode}
+\prg_new_conditional:Nnn \sys_if_shell_restricted: { p , T , F , TF }
+  {
+    \if_int_compare:w \c_sys_shell_escape_int = 2 ~
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+\tex_chardef:D \c__sys_eighteen = 18 ~
+%    \end{macrocode}
+%
+% \begin{macro}{\sys_shell_now:n}
+%   Execute commands through shell escape immediately.
+%    \begin{macrocode}
+\sys_if_engine_luatex:TF
+  {
+    \cs_new_protected:Npn \sys_shell_now:n #1
+      {
+        \luatex_directlua:D { os.execute(" \luatex_luaescapestring:D { #1 } ") }
+      }
+  }
+  {
+    \cs_new_protected:Npn \sys_shell_now:n #1
+      {
+        \iow_now:Nn \c__sys_eighteen { #1 }
+      }
+  }
+\cs_generate_variant:Nn \sys_shell_now:n { x }
+%    \end{macrocode}
+%   \emph{Note:} We could do this fully-expandably in \LuaTeX, but not
+%   in \pdfTeX.  This should be discussed.
+% \end{macro}
+%
+% \begin{macro}{\sys_shell_shipout:n}
+%   Execute commands through shell escape at shipout.
+%    \begin{macrocode}
+\sys_if_engine_luatex:TF
+  {
+    \cs_new_protected:Npn \sys_shell_shipout:n #1
+      {
+        \luatex_latelua:D { os.execute(" \luatex_luaescapestring:D { #1 } ") }
+      }
+  }
+  {
+    \cs_new_protected:Npn \sys_shell_shipout:n #1
+      {
+        \iow_shipout:Nn \c__sys_eighteen { #1 }
+      }
+  }
+\cs_generate_variant:Nn \sys_shell_shipout:n { x }
+%    \end{macrocode}
+%   \emph{Note:} We could do this fully-expandably in \LuaTeX, but not
+%   in \pdfTeX.  This should be discussed.
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3tl}}
