Move l3regex to stable/expl3

--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3tl-analysis.dtx Copyright (C) 2011-2012,2015-2017 The LaTeX3 Project
+%% File: l3tl-analysis.dtx Copyright (C) 2011-2012,2015-2017 The LaTeX3 Project%
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -9,7 +9,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -20,12 +20,8 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{expl3}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
-\usepackage{amsmath}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -168,11 +164,6 @@
 %
 %    \begin{macrocode}
 %<@@=tl_analysis>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-\ProvidesExplPackage{l3tl-analysis}{2017/05/13}{}
-  {L3 Experimental token list analysis}
 %    \end{macrocode}
 %
 % \subsection{Variables and helper functions}
@@ -410,9 +401,7 @@
       \tex_lowercase:D { \tex_let:D ^^@ } \tex_undefined:D
       \@@_disable_loop:N
     }
-  \bool_lazy_or:nnT
-    { \sys_if_engine_ptex_p: }
-    { \sys_if_engine_uptex_p: }
+  \cs_if_exist:NT \ptex_kanjiskip:D
     {
       \cs_gset_protected:Npn \@@_disable_loop:N #1
         {
