--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -9,7 +9,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -20,26 +20,8 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-% The version of expl3 required is tested as early as possible, as
-% some really old versions do not define \ProvidesExplPackage.
-\RequirePackage{expl3}[2017/05/13]
-%<package>\@ifpackagelater{expl3}{2017/05/13}
-%<package>  {}
-%<package>  {%
-%<package>    \PackageError{l3intarray}{Support package l3kernel too old}
-%<package>      {%
-%<package>        Please install an up to date version of l3kernel\MessageBreak
-%<package>        using your TeX package manager or from CTAN.\MessageBreak
-%<package>        \MessageBreak
-%<package>        Loading l3intarray will abort!%
-%<package>      }%
-%<package>    \endinput
-%<package>  }
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
-\usepackage{amsmath}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -142,11 +124,6 @@
 %<@@=intarray>
 %    \end{macrocode}
 %
-%    \begin{macrocode}
-\ProvidesExplPackage{l3intarray}{2017/05/13}{}
-  {L3 Experimental low-level arrays of small integers}
-%    \end{macrocode}
-%
 % \subsection{Allocating arrays}
 %
 % \begin{variable}{\g_@@_font_int}
@@ -207,7 +184,7 @@
         \int_compare:nTF { - \c_max_dim <= \int_abs:n {#3} <= \c_max_dim }
           { \@@_gset_fast:Nnn #1 {#2} {#3} }
           {
-            \__msg_kernel_error:nnxxxx { intarray } { overflow }
+            \__msg_kernel_error:nnxxxx { kernel } { overflow }
               { \token_to_str:N #1 } {#2} {#3}
               { \int_compare:nNnT {#3} < 0 { - } \__int_value:w \c_max_dim }
             \@@_gset_fast:Nnn #1 {#2}
@@ -215,7 +192,7 @@
           }
       }
       {
-        \__msg_kernel_error:nnxxx { intarray } { out-of-bounds }
+        \__msg_kernel_error:nnxxx { kernel } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
       }
   }
@@ -236,7 +213,7 @@
     \int_compare:nTF { 1 <= #2 <= \@@_count:N #1 }
       { \@@_item_fast:Nn #1 {#2} }
       {
-        \__msg_kernel_expandable_error:nnnnn { intarray } { out-of-bounds }
+        \__msg_kernel_expandable_error:nnnnn { kernel } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
         0
       }
@@ -244,23 +221,6 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-%
-% \subsection{Messages}
-%
-%    \begin{macrocode}
-\__msg_kernel_new:nnnn { intarray } { overflow }
-  { Integers~larger~than~2^{30}-1~cannot~be~stored~in~arrays. }
-  {
-    An~attempt~was~made~to~store~#3~at~position~#2~in~the~array~'#1'.~
-    The~largest~allowed~value~#4~will~be~used~instead.
-  }
-\__msg_kernel_new:nnnn { intarray } { out-of-bounds }
-  { Access~to~an~entry~beyond~an~array's~bounds. }
-  {
-    An~attempt~was~made~to~access~or~store~data~at~position~#2~of~the~
-    array~'#1',~but~this~array~has~entries~at~positions~from~1~to~#3.
-  }
-%    \end{macrocode}
 %
 %    \begin{macrocode}
 %</initex|package>
