--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -9,7 +9,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -20,26 +20,8 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-% The version of expl3 required is tested as early as possible, as
-% some really old versions do not define \ProvidesExplPackage.
-\RequirePackage{expl3}[2017/05/13]
-%<package>\@ifpackagelater{expl3}{2017/05/13}
-%<package>  {}
-%<package>  {%
-%<package>    \PackageError{l3regex}{Support package l3kernel too old}
-%<package>      {%
-%<package>        Please install an up to date version of l3kernel\MessageBreak
-%<package>        using your TeX package manager or from CTAN.\MessageBreak
-%<package>        \MessageBreak
-%<package>        Loading l3regex will abort!%
-%<package>      }%
-%<package>    \endinput
-%<package>  }
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
-\usepackage{amsmath}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -68,7 +50,7 @@
 %   {\begin{itemize}\def\\{\char`\\}\def\makelabel##1{\hss\llap{\ttfamily##1}}}
 %   {\end{itemize}}
 %
-% \section{\pkg{l3regex} documentation}
+% \section{Regular expressions}
 %
 % The \pkg{l3regex} package provides regular expression testing,
 % extraction of submatches, splitting, and replacement, all acting
@@ -740,14 +722,6 @@
 %
 %    \begin{macrocode}
 %<@@=regex>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-%<*package>
-\ProvidesExplPackage{l3regex}{2017/05/13}{}
-  {L3 Experimental regular expressions}
-\RequirePackage{l3tl-build, l3tl-analysis, l3intarray}
-%</package>
 %    \end{macrocode}
 %
 % \subsection{Plan of attack}
