--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -419,6 +419,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3str.dtx}
 \DocInput{l3seq.dtx}
 \DocInput{l3int.dtx}
+\DocInput{l3intarray.dtx}
 \DocInput{l3flag.dtx}
 \DocInput{l3quark.dtx}
 \DocInput{l3prg.dtx}
@@ -452,6 +453,9 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \ExplSyntaxOff
 
 \DocInput{l3sort.dtx}
+\DocInput{l3tl-analysis.dtx}
+\DocInput{l3tl-build.dtx}
+\DocInput{l3regex.dtx}
 \DocInput{l3box.dtx}
 \DocInput{l3coffins.dtx}
 \DocInput{l3color.dtx}
