Move where \tl_to_str:V is created
As l3regex is now in the core, this can go in the 'natural' place.

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -605,7 +605,7 @@
 %
 % \section{Using token lists}
 %
-% \begin{function}[EXP]{\tl_to_str:n}
+% \begin{function}[EXP]{\tl_to_str:n, \tl_to_str:V}
 %   \begin{syntax}
 %     \cs{tl_to_str:n} \Arg{token list}
 %   \end{syntax}
@@ -2267,8 +2267,11 @@
 %
 % \subsection{Using token lists}
 %
-% \begin{macro}{\tl_to_str:n}
+% \begin{macro}{\tl_to_str:n, \tl_to_str:V}
 %   Another name for a primitive: defined in \pkg{l3basics}.
+%    \begin{macrocode}
+\cs_generate_variant:Nn \tl_to_str:n { V }
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\tl_to_str:N, \tl_to_str:c}
