Use \int_const:Nn for \c__sys_eighteen

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2131,7 +2131,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-\tex_chardef:D \c__sys_eighteen = 18 ~
+\int_const:Nn \c__sys_eighteen { 18 }
 %    \end{macrocode}
 %
 % \begin{macro}{\sys_shell_now:n}
