Use @@ convention for additions to l3sys

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2031,6 +2031,10 @@
 %
 % \subsection{Additions to \pkg{l3sys}}
 %
+%    \begin{macrocode}
+%<@@=sys>
+%    \end{macrocode}
+%
 % \begin{macro}[EXP, pTF]{\sys_if_rand_exist:}
 %   Currently, randomness exists under \pdfTeX{} and \LuaTeX{}.
 %    \begin{macrocode}
@@ -2129,9 +2133,9 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\c__sys_shell_stream_int}
+% \begin{variable}{\c_@@_shell_stream_int}
 %    \begin{macrocode}
-\int_const:Nn \c__sys_shell_stream_int { 18 }
+\int_const:Nn \c_@@_shell_stream_int { 18 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2148,7 +2152,7 @@
   {
     \cs_new_protected:Npn \sys_shell_now:n #1
       {
-        \iow_now:Nn \c__sys_shell_stream_int { #1 }
+        \iow_now:Nn \c_@@_shell_stream_int { #1 }
       }
   }
 \cs_generate_variant:Nn \sys_shell_now:n { x }
@@ -2168,7 +2172,7 @@
   {
     \cs_new_protected:Npn \sys_shell_shipout:n #1
       {
-        \iow_shipout:Nn \c__sys_shell_stream_int { #1 }
+        \iow_shipout:Nn \c_@@_shell_stream_int { #1 }
       }
   }
 \cs_generate_variant:Nn \sys_shell_shipout:n { x }
